@@ -10,6 +10,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.goorm.insideout.chatroom.domain.ChatRoom;
+import com.goorm.insideout.chatroom.repository.ChatRoomRepository;
 import com.goorm.insideout.club.dto.responseDto.ClubBoardResponseDto;
 import com.goorm.insideout.club.dto.responseDto.ClubListResponseDto;
 import com.goorm.insideout.club.entity.Category;
@@ -24,10 +25,12 @@ import com.goorm.insideout.club.entity.Club;
 import com.goorm.insideout.club.repository.ClubUserRepository;
 import com.goorm.insideout.global.exception.ErrorCode;
 import com.goorm.insideout.global.exception.ModongException;
+import com.goorm.insideout.meeting.dto.request.SearchRequest;
 import com.goorm.insideout.image.domain.ProfileImage;
 import com.goorm.insideout.image.repository.ProfileImageRepository;
 import com.goorm.insideout.user.domain.User;
 import com.goorm.insideout.user.repository.UserRepository;
+import com.goorm.insideout.userchatroom.repository.UserChatRoomRepository;
 
 import lombok.RequiredArgsConstructor;
 
@@ -37,6 +40,8 @@ import lombok.RequiredArgsConstructor;
 public class ClubServiceImpl implements ClubService{
 
 	private final ClubRepository clubRepository;
+	private final ChatRoomRepository chatRoomRepository;
+	private final UserChatRoomRepository userChatRoomRepository;
 	private final ClubUserRepository clubUserRepository;
 	private final ClubApplyRepository clubApplyRepository;
 	private final UserRepository userRepository;
@@ -87,17 +92,19 @@ public class ClubServiceImpl implements ClubService{
 		return club;
 	}
 
+
 	@Override
 	public Club findByClubId(Long clubId) {
 
-		return clubRepository.findById(clubId).orElseThrow(null);
+		return clubRepository.findById(clubId).orElseThrow(
+			() -> ModongException.from(ErrorCode.CLUB_NOT_FOUND));
 	}
 
 	@Override
-	public ClubBoardResponseDto findClubBoard(Long clubId, User user) {
+	public ClubBoardResponseDto findClubBoard(Long clubId) {
 		Club byClubId = findByClubId(clubId);
 
-		return ClubBoardResponseDto.of(byClubId, user);
+		return ClubBoardResponseDto.of(byClubId);
 	}
 
 	@Override
@@ -154,7 +161,19 @@ public class ClubServiceImpl implements ClubService{
 
 		return clubRepository.findAllByOrderByClubIdDesc().stream()
 			.map(ClubListResponseDto::new)
-			.collect(Collectors.toList());
+			.toList();
+	}
+
+	// 정렬 타입에 따른 조회
+	@Override
+	public List<ClubBoardResponseDto> findBySortType(SearchRequest condition) {
+		return clubRepository.findBySortType(condition);
+	}
+
+	// 검색 조건 및 정렬 타입에 따른 조회
+	@Override
+	public List<ClubBoardResponseDto> findByConditionAndSortType(SearchRequest condition) {
+		return clubRepository.findByConditionAndSortType(condition);
 	}
 
 	/*
